--- a/Boostrap/index.html
+++ b/Boostrap/index.html
@@ -45,7 +45,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="/Users/mariajosedeanda/Desktop/DEV.F/Condicionales/ejercicicioCintaBlancaB40/img/01.jpg" alt="prueba">
+              <img class="img-fluid rounded-circle" src="img/01.jpg" alt="prueba">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
