--- a/Boostrap/index.html
+++ b/Boostrap/index.html
@@ -63,7 +63,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="/Users/mariajosedeanda/Desktop/DEV.F/Condicionales/ejercicicioCintaBlancaB40/img/02.jpg" alt="prueba">
+              <img class="img-fluid rounded-circle" src="img/02.jpg" alt="prueba">
             </div>
           </div>
               <div class="col-lg-6 order-lg-2">
@@ -82,7 +82,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="/Users/mariajosedeanda/Desktop/DEV.F/Condicionales/ejercicicioCintaBlancaB40/img/03.jpg" alt="prueba">
+              <img class="img-fluid rounded-circle" src="img/03.jpg" alt="prueba">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
